@@ -20,8 +20,18 @@
 
 #include "rbgst.h"
 
-/* FIXME: Document me */
+/* Module: Gst::RegistryPool
+ * The registry pool manages the available registries and plugins in the 
+ * system.
+ */
 
+/* 
+ * Class method: list
+ * 
+ * Gets a list of all registries in the pool.
+ * 
+ * Returns: an Array of Gst::Registry objects.
+ */
 static VALUE
 rb_gst_rp_list (VALUE self)
 {
@@ -34,6 +44,15 @@ rb_gst_rp_list (VALUE self)
 	return ary;
 }
 
+/*
+ * Class method: add(registry, priority)
+ * registry: a Gst::Registry object to add.
+ * priority: an integer value representing the priority of the registry.
+ *
+ * Adds the given registry to the pool with the given priority.
+ *
+ * Returns: self.
+ */
 static VALUE
 rb_gst_rp_add (VALUE self, VALUE registry, VALUE priority)
 {
@@ -42,6 +61,14 @@ rb_gst_rp_add (VALUE self, VALUE registry, VALUE priority)
 	return self;
 }
 
+/*
+ * Class method: remove(registry)
+ * registry: a Gst::Registry object to remove.
+ *
+ * Removes the given registry from the pool.
+ * 
+ * Returns: self.
+ */
 static VALUE
 rb_gst_rp_remove (VALUE self, VALUE registry)
 {
@@ -49,6 +76,14 @@ rb_gst_rp_remove (VALUE self, VALUE registry)
 	return self;
 }
 
+/*
+ * Class method: add_plugin(plugin)
+ * plugin: a Gst::Plugin object to add.
+ *
+ * Adds the given plugin to the global pool of plugins.
+ * 
+ * Returns: self.
+ */
 static VALUE
 rb_gst_rp_add_plugin (VALUE self, VALUE plugin)
 {
@@ -56,6 +91,14 @@ rb_gst_rp_add_plugin (VALUE self, VALUE plugin)
 	return self;
 }
 			
+/*
+ * Class method: load_all
+ *
+ * Loads all the registries in the pool.  Registries with the
+ * Gst::Registry::DELAYED_LOADING flag will not be loaded.
+ *
+ * Returns: self.
+ */
 static VALUE
 rb_gst_rp_load_all (VALUE self)
 {
@@ -63,6 +106,13 @@ rb_gst_rp_load_all (VALUE self)
 	return self;
 }
 
+/*
+ * Class method: plugin_list
+ *
+ * Gets a list of all plugins in the pool.
+ *
+ * Returns: an Array of Gst::Plugin objects.
+ */
 static VALUE
 rb_gst_rp_plugin_list (VALUE self)
 {
@@ -75,6 +125,14 @@ rb_gst_rp_plugin_list (VALUE self)
 	return ary;
 }
 
+/*
+ * Class method: feature_list(klass)
+ * klass: a GTyped class object.
+ *
+ * Gets a list of all plugins features of the given type in the pool.
+ *
+ * Returns: an Array of Gst::PluginFeature objects.
+ */
 static VALUE
 rb_gst_rp_feature_list (VALUE self, VALUE klass)
 {
@@ -87,6 +145,15 @@ rb_gst_rp_feature_list (VALUE self, VALUE klass)
 	return ary;
 }
 
+/*
+ * Class method: find_plugin(name)
+ * name: the name of the plugin to find.
+ *
+ * Gets the named plugin from the registry pool.
+ *
+ * Returns: the Gst::Plugin with the given name, or nil if the plugin was
+ * not found.
+ */
 static VALUE
 rb_gst_rp_find_plugin (VALUE self, VALUE name)
 {
@@ -98,6 +165,17 @@ rb_gst_rp_find_plugin (VALUE self, VALUE name)
 		: Qnil;
 }
 
+/*
+ * Class method; find_feature(name, klass)
+ * name: the name of the plugin feature to find.
+ * klass: a GTyped class object.
+ *
+ * Gets the plugin feature with the given name of type from the pool of
+ * registries.
+ *
+ * Returns: a Gst::PluginFeature with the given name and type, or nil
+ * if the plugin feature was not found.
+ */
 static VALUE
 rb_gst_rp_find_feature (VALUE self, VALUE name, VALUE klass)
 {
@@ -110,6 +188,12 @@ rb_gst_rp_find_feature (VALUE self, VALUE name, VALUE klass)
 		: Qnil;
 }
 
+/*
+ * Class method: get_prefered(flags)
+ * flags: the flags for the prefered registry (see Gst::Registry::Flags).
+ *
+ * Returns: the prefered Gst::Registry with the given flags.
+ */
 static VALUE
 rb_gst_rp_get_prefered (VALUE self, VALUE flags)
 {
@@ -128,15 +212,12 @@ Init_gst_registry_pool (void)
 	VALUE m = rb_define_module_under (mGst, "RegistryPool");
 
 	rb_define_module_function (m, "list", rb_gst_rp_list, 0);
-	rb_define_alias (m, "registries", "list");
 	rb_define_module_function (m, "add", rb_gst_rp_add, 2);
 	rb_define_module_function (m, "remove", rb_gst_rp_remove, 1);
 	rb_define_module_function (m, "add_plugin", rb_gst_rp_add_plugin, 1);
 	rb_define_module_function (m, "load_all", rb_gst_rp_load_all, 0);
 	rb_define_module_function (m, "plugin_list", rb_gst_rp_plugin_list, 0);
-	rb_define_alias (m, "plugins", "plugin_list");
 	rb_define_module_function (m, "feature_list", rb_gst_rp_feature_list, 1);
-	rb_define_alias (m, "features", "feature_list");
 	rb_define_module_function (m, "find_plugin", rb_gst_rp_find_plugin, 1);
 	rb_define_module_function (m, "find_feature", rb_gst_rp_find_feature, 2);
 	rb_define_module_function (m, "get_prefered", rb_gst_rp_get_prefered, 1);
